[gd_scene load_steps=22 format=2]

[ext_resource path="res://Enemies/Player2Enemy.png" type="Texture" id=1]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Collision/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Player2Enemy.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Collision/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=8]
[ext_resource path="res://WhiteColour.shader" type="Shader" id=9]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Fly",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 8.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 4.0
height = 4.0

[sub_resource type="CircleShape2D" id=10]
radius = 5.0

[sub_resource type="CapsuleShape2D" id=11]
radius = 4.0
height = 6.0

[sub_resource type="Animation" id=12]
resource_name = "Start"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Player2Enemy" type="KinematicBody2D"]
collision_layer = 262148
collision_mask = 262149
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -12 )
frames = SubResource( 7 )
animation = "Fly"
frame = 4
playing = true

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 8 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -8 )
shape = SubResource( 9 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
maxHealth = 2

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
collision_mask = 1024

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.376471 )
shape = SubResource( 10 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, -6 )
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 3 )
shape = SubResource( 11 )

[node name="WanderController" parent="." instance=ExtResource( 8 )]
wanderRange = 50

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 12 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="noHealth" from="Stats" to="." method="_on_Stats_noHealth"]
[connection signal="area_entered" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_PlayerDetectionZone_area_entered"]
[connection signal="area_exited" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_PlayerDetectionZone_area_exited"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
